--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@mui/base": "^5.0.0-beta.17",
     "@prisma/client": "^5.3.1",
     "@remix-run/css-bundle": "^2.0.1",
@@ -22,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.5.1",
-    "remix-auth-form": "^1.3.0"
+    "remix-auth-form": "^1.3.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
