--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@fisch0920/use-dark-mode": "^2.4.0",
     "@heroicons/react": "^2.0.18",
     "@mui/base": "^5.0.0-beta.17",
     "@prisma/client": "^5.3.1",
@@ -19,6 +20,7 @@
     "@remix-run/serve": "^2.0.1",
     "@types/bcryptjs": "^2.4.4",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
