--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "remix-auth": "^3.5.1",
     "remix-auth-form": "^1.3.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "type-fest": "^4.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
